made Hero a component instead of hardcoded html and fixed white gap

--- a/brookes-boarding/src/App.css
+++ b/brookes-boarding/src/App.css
@@ -1,21 +1,21 @@
 .App {
   text-align: center;
   background: darksalmon;
-  max-width: min-content;
+  /* max-width: min-content; */
 }
 
-.App-logo {
+/* .App-logo {
   height: 40vmin;
   pointer-events: none;
-}
+} */
 
-@media (prefers-reduced-motion: no-preference) {
+/* @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
-}
+} */
 
-.App-header {
+/* .App-header {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
@@ -24,9 +24,9 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: chocolate;
-}
+} */
 
-.App-link {
+/* .App-link {
   color: #61dafb;
 }
 
@@ -37,4 +37,4 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
