--- a/brookes-boarding/src/Components/Header/Header.css
+++ b/brookes-boarding/src/Components/Header/Header.css
@@ -10,6 +10,8 @@
   background-color: #ea82b7;
   align-items: center;
   justify-content: center;
+  padding: 0%;
+  margin: 0%;
 }
 
 .button-38 {
@@ -57,8 +59,9 @@
   margin-right: 3%;
 }
 
-.container {
+/* .container {
   background: red;
   max-width: 0px;
   padding-left: 0%;
-}
+  margin-left: 0%;
+} */
