--- a/brookes-boarding/src/Components/Hero/hero.css
+++ b/brookes-boarding/src/Components/Hero/hero.css
@@ -35,3 +35,19 @@
   width: 1.5rem;
   fill: white;
 }
+
+.container,
+.container-fluid,
+.container-xxl,
+.container-xl,
+.container-lg,
+.container-md,
+.container-sm {
+  --bs-gutter-x: 1.5rem;
+  --bs-gutter-y: 0;
+  width: 100%;
+  padding-right: none;
+  padding-left: none;
+  margin-right: none;
+  margin-left: none;
+}
